test/bad/generics/def05.px

func f<T>(T x: 3) def
    return

f(3.0)
